--- a/index.html
+++ b/index.html
@@ -35,14 +35,26 @@
                 </div>
             </div>
         </section>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        
+        <!-- seção inicio-->
+        <section class="about" id="about">
+            <div class="max-width">
+                <h2 class="title">Sobre mim</h2>
+                <div class="about-content">
+                    <div class="column left">
+                        <img src="image/pgrammermen.jpg" alt="">
+                    </div>
+                    <div class="column right">
+                        <div class="text"> Eu sou o milior do mundo Eu sou <span>Dev back end</span> </div>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo libero hic exercitationem at fugiat consequuntur enim rem suscipit ea, dolorem numquam? Numquam atque expedita commodi perferendis reiciendis laboriosam, nihil, mollitia doloremque explicabo ab nemo eaque veritatis magni aliquam totam! Vero praesentium molestiae cupiditate quis, laboriosam aut consequatur repellat animi architecto ad? Autem corporis expedita culpa consectetur temporibus quisquam. Atque, veritatis.</p>
+                        <a href="#">DOWNLOAD CV</a>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </section>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" ></script>
