seção de experioencias
experiencias implementadas no site

--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam eos tenetur suscipit quae!</p>
                             </div>
                         </div>
+
+                        <div class="card">
+                            <div class="box">
+                                <ion-icon name="reader-outline"></ion-icon>
+                                <div class="text"> back-end developer</div>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam eos tenetur suscipit quae!</p>
+                            </div>
+                        </div>
                         
                         <div class="card">
                             <div class="box">
@@ -81,6 +89,13 @@
         
         </section>
 
+         <!-- skils inicio-->
+        <section class="skills" id="skills">
+            <div class="max-width">
+                <h2 class="title">Conhecimentos</h2>
+            </div>
+
+        </section>
 
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
